# OrchardDrone

./: .gitignore  Point Cloud topic drone  README.md
Determine waypoints (Matlab)/: mapping.m  row_inspection.m
Gazebo models/my_ground_plane/: model.config  model.sdf
Gazebo models/my_ground_plane/materials/scripts/: my_ground_plane.material
Gazebo models/oak_tree/meshes/: oak_tree.dae
TutorialFolder/: Fix 3000  GazeboFix  HectorInstall  LaunchTutorial  OctomapTutorial  ToDo  asdasd
math/: Inertial.hh  MassMatrix3.hh
newSRC/src/ardrone_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
newSRC/src/ardrone_moveit_config/config/: quadrotor.srdf  ros_controllers.yaml
newSRC/src/ardrone_moveit_config/launch/: ardrone_navigation.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  (+12 more)
newSRC/src/load_octomap/: package.xml
newSRC/src/maps/: octomapFull.bt
pcl_communication/: CMakeLists.txt  README.md  package.xml
pcl_communication/msg/: volumetricData.msg  volumetricDataArray.msg
pcl_communication/pcd files/: dataTree.pcd
pcl_communication/src/: pcl_communication.cpp
src/: .rosinstall  README.md
src/dji_stack/dji_simulations/: CMakeLists.txt  package.xml
src/hector_quadrotor/: .rosinstall  setup.sh
src/mapping/load_octomap/: CMakeLists.txt
src/mapping/maps/: octomapPartial.bt  octomap_basicForest_zeroed.bt  octomap_basicForest_zeroed.ot
src/moveit/hector_moveit_move_to_goal/: CMakeLists.txt  package.xml
src/moveit/hector_moveit_move_to_goal/include/: move_to_goal.h
src/moveit/hector_moveit_move_to_goal/launch/: move_to_goal.launch
src/moveit/hector_moveit_move_to_goal/src/: move_to_goal.cpp  move_to_goal_node.cpp
src/sjtu_drone/: README.md
src/sjtu_drone/meshes/: corridor.dae  cwm.dae  cwm_01.dae  cwm_03.dae  cwm_04.dae
src/waypoints/betweenTrees/: CMakeLists.txt  package.xml
src/waypoints/send_waypoints/: CMakeLists.txt  package.xml
(+51 files in other folders)
